<resources>
    <string name="app_name">CronMarket</string>
    <string name="common_gps_disabled">Похоже, что GPS выключен. Вы хотите включить GPS</string>
    <string name="common_gps_enabled">Необходимо включить GPS</string>
    <string name="common_yes">Да</string>
    <string name="common_no">Нет</string>
    <string name="common_user_not_authorized">Пользователь не авторизован</string>
    <string name="base_error_icon_description">Иконка ошибки</string>
    <string name="any_error_title">Что-то пошло не так</string>
    <string name="any_error_message">В работе приложения произошла ошибка.\nПопробуйте снова, и при повторной ошибке \n обратитесь в техподдержку.</string>
    <string name="any_error_submit_text">Попробовать снова</string>
    <string name="connection_error_title">Отсутствует интернет соединение</string>
    <string name="connection_error_message">Приложение не может связаться с \n сервером. Возможно у вас остутствует \n интернет соединение.</string>
    <string name="connection_error_submit_text">Попробовать снова</string>
    <string name="first_address_selection_title">Укажите адрес доставки</string>
    <string name="first_address_selection_address_title">Адрес доставки</string>
    <string name="first_address_selection_info_message">Укажите адрес доставки чтобы мы были уверены, что можем доставить Ваш заказ</string>
    <string name="first_address_selection_success_message">Отлично! Давайте приступим к покупкам.</string>
    <string name="first_address_selection_error_message">К сожалению в городе %1$s пока нет нашей доставки. Выберите город из списка выше</string>
    <string name="first_address_selection_location_error_message">К сожалению ваш адрес не был определен, введите пожалуйста адрес вручную</string>
    <string name="first_address_selection_warning_message">К сожалению по данному адресу мы пока не можем доставить заказ. Но вы можете посмотреть наше приложение и заказать по другому адресу</string>
    <string name="first_address_selection_write_house_number_message">Укажите номер дома</string>
    <string name="first_address_selection_info_description">Информационное сообщение</string>
    <string name="first_address_selection_find_location">Определить моё местоположение</string>
    <string name="first_address_selection_start_shopping">Перейти к покупкам</string>
    <string name="first_address_selection_access_location_permission_title">Местоположение пользователя</string>
    <string name="first_address_selection_access_location_permission_description">Доступ к местоположению пользователя необходим для определения адреса доставки</string>
    <string name="first_address_selection_access_location_permission_ok">Ок</string>
    <string name="skip_onboard">Пропуск онбординга</string>
    <string name="completed_onboard">Пропуск онбординга</string>
    <string name="main_special_offers_title"><font color="#212529">Акции от </font><font color="#FF4C30">Cron</font><font color="#212529">Market</font></string>
    <string name="main_address_incorrect">Укажите адрес доставки</string>
    <string name="main_search">Поиск</string>
    <string name="main_btn_amount">%s ₽</string>
    <string name="onboard_one_slide">Далее</string>
    <string name="onboard_two_slide">Продолжайте</string>
    <string name="onboard_three_slide">Что ещё?</string>
    <string name="onboard_four_slide">Отлично!</string>
    <string name="market_category_special_offers">Акции от CronДоставки</string>
    <string name="market_category_all_tags">Все заведения</string>
    <string name="market_category_other_tags">…</string>
    <string name="market_category_partner_common_rating">0.0</string>
    <string name="market_category_rating_description">Рэйтинг</string>
    <string name="market_category_min_price_description">Минимальная стоимость заказа</string>
    <string name="market_category_partner_image_description">Изображение партнера</string>
    <string name="market_category_partner_min_price">от %1$d₽</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="drawer_logo_image_description">Логотип крон доставка</string>
    <string name="drawer_profile_image_description">Профиль</string>
    <string name="drawer_menu_item_shops">Магазины</string>
    <string name="drawer_menu_item_orders">Заказы</string>
    <string name="drawer_menu_item_contacts">Связаться с нами</string>
    <string name="drawer_menu_item_about_us">О сервисе</string>
    <string name="drawer_menu_item_vacancies">Стать курьером</string>
    <string name="drawer_menu_settings">Настройки</string>
    <string name="drawer_log_in">Вход / Регистрация</string>
    <string name="drawer_log_out">Выйти из профиля</string>
    <string name="drawer_profile_name_unauthorized">Вход \nне выполнен</string>
    <string name="drawer_menu_item_my_orders_title">Мои заказы</string>
    <string name="enter_phone_title">Укажите номер</string>
    <string name="confirm_phone_title">Подтвердите номер</string>
    <string name="whats_your_name_title">Как вас зовут?</string>
    <string name="enter_your_name_title">Введите ваше имя, чтобы мы могли к вам правильно обращаться</string>
    <string name="code_from_sms_title">Код из смс</string>
    <string name="your_name_title">Ваше имя</string>
    <string name="sms_sent_title">На номер %1$s отправлено СМС с кодом подтверждения. Введите его, чтобы войти</string>
    <string name="enter_phone_for_auth_title">Введите номер телефона для авторизации</string>
    <string name="next_title">Далее</string>
    <string name="confirm_title">Подтвердить</string>
    <string name="done_title">Готово</string>
    <string name="privacy_policy_text"><font color="#212529">Продолжая, я подтверждаю, что согласен с
    </font> <font color="#0000ff"><u>правилами, условиями и политикой конфидециальности.</u></font></string>
    <string name="repeat_sent_code_title">Выслать код повторно можно через %1$d сек</string>
    <string name="enter_phone_repeat_send_code_title"><u>Выслать код повторно</u></string>
    <string name="partners_activity_min_order_template">заказ от %1$d&#160;\u20BD</string>
    <string name="partners_activity_free_delivery_template">от %1$d \u20BD&#160;бесплатно</string>
    <string name="partners_activity_free_delivery_template_small_screen">от %1$d \u20BD\nбесплатно</string>
    <string name="partners_activity_close_title">Закрыть</string>
    <string name="partners_activity_dialog_min_price_title">Минимальная сумма заказа составляет %s₽</string>
    <string name="partners_activity_dialog_btn_ok_title">Ок</string>
    <string name="delivery_details_address_title">Адрес доставки</string>
    <string name="delivery_details_enter_address_title">Введите адрес</string>
    <string name="delivery_details_entrance_title">Подъезд</string>
    <string name="delivery_details_floor_title">Этаж</string>
    <string name="delivery_details_flat_title">Квартира</string>
    <string name="delivery_details_save_address_title">Сохранить адрес</string>
    <string name="delivery_details_phone_number_title">Номер телефона</string>
    <string name="delivery_details_comments_to_order_title">Комментарий к заказу</string>
    <string name="delivery_details_delivery_time_title">40-60 минут</string>
    <string name="delivery_details_delivery_chosen_time_title">Время доставки - %s</string>
    <string name="delivery_details_soon_as_possible_title">Как можно скорее</string>
    <string name="delivery_details_in_time_title">Ко времени</string>
    <string name="delivery_details_title">Детали доставки</string>
    <string name="order_costs_title">Стоимость заказа</string>
    <string name="delivery_details_choose_delivery_time_title">Выберите время доставки</string>
    <string name="order_bottom_dialog_open_time_title">Откроется в %s</string>
    <string name="about_service_advantages_title">Наши основные преимущества</string>
    <string name="about_service_other_products_title">Еда, продукты и любые товары</string>
    <string name="about_service_other_products_description">В нашем приложение вы можете заказать еду уже сейчас. За это лето мы добавим продукты, книги, аптеки и косметику и т.д. Также будем рады если вы сообщите нам что бы вы хотели видеть у нас в ассортименте.</string>
    <string name="about_service_delivery_title">Доставим клиенту заказ вовремя</string>
    <string name="about_service_delivery_description">С помощью команды наших курьеров мы доставляем любой заказ по городу за 30-60 мин.</string>
    <string name="about_service_interface_title">Простой интерфейс</string>
    <string name="about_service_interface_description">Наше приложение позволяет за несколько кликов сделать заказ в любой категории ассортимента и получить его очень быстро с доставкой до двери.</string>
    <string name="about_service_support_title">Поддержка 24/7</string>
    <string name="about_service_support_description">Вы можете связаться с нами и получить ответ по интересующей вас информации.</string>
    <string name="about_our_service_title">Наш сервис</string>
    <string name="about_our_service_description">Наша площадка работает для того чтобы наши клиенты получили возможность не выходя из дома и комфортно получать все что они закажут. Потому что мы считаем что в наше время и при нашем ритме жизни, мы не должны терять время на походы в магазины. Наш сервис освобождает ваше время.</string>
    <string name="contacts_for_cooperation_title">По вопросам сотрудничества:</string>
    <string name="contacts_said_lev_title">Гюльмагомедов Саид \nГюльмагомедович</string>
    <string name="contacts_said_lev_position_title">Руководитель отдела по работе с \nпартнёрами</string>
    <string name="contacts_said_lev_phone_title">Телефон: <font color="#e66835">8(965) 417-39-04</font></string>
    <string name="contacts_said_lev_email_title">Эл.почта: <font color="#e66835">gsg@cron.ooo</font></string>
    <string name="contacts_magomed_title">Гаджиев Магомед Рамазанович</string>
    <string name="contacts_magomed_position_title">Старший менеджер отдела по работе с \nклиентами</string>
    <string name="contacts_magomed_phone_title">Телефон: <font color="#e66835">8(928) 514-79-23</font></string>
    <string name="contacts_magomed_email_title">Эл.почта: <font color="#e66835">magomed.g@cron.ooo</font></string>
    <string name="vacancies_word_in_cron_delivery_title">CronMarket</string>
    <string name="vacancies_description_title">Наша команда доставки находится на передовой и в снег, и зной, и в гололед. Мы доставляем заказы и никогда не поднимаем цены для наших клиентов из-за погоды. Наши курьеры работают из нескольких комфортабельных офисов. \n\n\nВ нашу команду принимаются лучшие, молодые и амбициозные.</string>
    <string name="vacancies_every_week_payment_title">Еженедельные выплаты</string>
    <string name="vacancies_every_week_payment_description">Средний ежедневный доход - 1000р.</string>
    <string name="vacancies_bonuses_title">Бонусы</string>
    <string name="vacancies_bonuses_description">Выполните 100 заказов за первый месяц и получите бонус.</string>
    <string name="vacancies_fixed_pay_title">Фиксированная оплата за смену</string>
    <string name="vacancies_fixed_pay_description">Даже если заказов мало, наши сотрудники получают фиксированную оплату за выход на смену.</string>
    <string name="vacancies_delivery_transport_title">Выдача транспорта</string>
    <string name="vacancies_delivery_transport_description">Мы выдаем своим курьерам велосипеды.</string>
    <string name="vacancies_contacts_title">Контакты для связи</string>
    <string name="vacancies_artem_title">Магомед Рамазанович</string>
    <string name="vacancies_position_title">Руководитель курьерского сервиса</string>
    <string name="vacancies_phones_title">Телефон:</string>
    <string name="vacancies_first_phone_title">+79285147923</string>
</resources>