<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_word_in_cron_delivery_title"
            android:textColor="@color/grey90"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_description_title"
            android:textColor="@color/grey90" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_every_week_payment_title"
            android:textColor="@color/grey90"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_every_week_payment_description"
            android:textColor="@color/grey90" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_bonuses_title"
            android:textColor="@color/grey90"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_bonuses_description"
            android:textColor="@color/grey90" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_fixed_pay_title"
            android:textColor="@color/grey90"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_fixed_pay_description"
            android:textColor="@color/grey90" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_delivery_transport_title"
            android:textColor="@color/grey90"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_delivery_transport_description"
            android:textColor="@color/grey90" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_contacts_title"
            android:textColor="@color/grey90"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_artem_title"
            android:textColor="@color/grey90"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/vacancies_position_title"
            android:textColor="@color/grey70" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="36dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vacancies_phones_title"
                android:textColor="@color/grey90" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_first_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vacancies_first_phone_title"
                    android:textColor="@color/vacancies_phones_color"/>


                <TextView
                    android:id="@+id/tv_second_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/vacancies_second_phone_title"
                    android:textColor="@color/vacancies_phones_color"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>